clase 27 de junio

--- a/miweb/blog/templates/galeria.html
+++ b/miweb/blog/templates/galeria.html
@@ -1,21 +1,15 @@
 {% extends "./base.html" %}
 
 {% block titulo %}
-    {{title}}
+   {{title}}
 {% endblock %}
-
 
 {% block contenido %}
 <div class="container">
     <div class="row">
         <div class="col">
-            <h1>DASHBOARD</h1>
-            <p>
-               BREAK #3 hasta las 22:25 (15 min)
-            </p>
-            
+            <h1>Galeria</h1>
         </div>
     </div>
 </div>
-
 {% endblock %}
