--- a/miweb/blog/templates/time_display.html
+++ b/miweb/blog/templates/time_display.html
@@ -19,13 +19,16 @@
         </div>
         <div class="row">
             <div class="col">
-                <form action="" method="post">
+                <form action="" method="POST">
                     {% csrf_token %}
                     <button type="submit" class="btn btn-danger">Actualizar</button>
                 </form>
             </div>
             <div class="col">
                 <a href="/time_display" class="btn btn-primary">Actualizar</a>
+            </div>
+            <div class="col">
+                <a href="/redireccion" class="btn btn-primary">Redireccion</a>
             </div>
         </div>
 
